[gd_scene load_steps=3 format=3 uid="uid://dmrhnsyjqpknm"]

[ext_resource type="Script" path="res://Scripts/ui/gui_buttons.gd" id="1_rr6m2"]
[ext_resource type="PackedScene" uid="uid://8t53t4rmile7" path="res://Scenes/ui/button_press_audio_player.tscn" id="2_f8vg5"]

[node name="Buttons" type="PanelContainer"]
script = ExtResource("1_rr6m2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Buttons" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.1

[node name="ExitButton" type="Button" parent="MarginContainer/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 0
text = "Exit"

[node name="InventoryButton" type="Button" parent="MarginContainer/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
toggle_mode = true
text = "Gear"

[node name="CameraButton" type="Button" parent="MarginContainer/Buttons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
toggle_mode = true
text = "Cam"

[node name="ButtonPressAudioPlayer" parent="." instance=ExtResource("2_f8vg5")]
